@@ -6,6 +6,10 @@ namespace Eris
 
 static std::vector<BaseDeleteLater*> global_deleteLaterQueue;
 
+BaseDeleteLater::~BaseDeleteLater()
+{
+}
+
 void pushDeleteLater(BaseDeleteLater* bl)
 {
     global_deleteLaterQueue.push_back(bl);
@@ -14,9 +18,13 @@ void pushDeleteLater(BaseDeleteLater* bl)
 void execDeleteLaters()
 {
     while (!global_deleteLaterQueue.empty()) {
-        global_deleteLaterQueue.back()->execute();
-        delete global_deleteLaterQueue.back();
+        // ordering here is important, in cases where deleting 'foo' causes
+        // other objects to be 'deleteLater'ed; we want to clean them up in
+        // this same cycle, not leave the hanging around.
+        
+        BaseDeleteLater* dl = global_deleteLaterQueue.back();
         global_deleteLaterQueue.pop_back();
+        delete dl;
     }
 }
 
